--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-		<link rel="stylesheet" href="../css/mui.min.css">
+		<link rel="stylesheet" href="css/mui.min.css">
 		<style>
 			html,
 			body {
@@ -71,7 +71,7 @@
 		</header>
 		<div class="mui-loader">加载中...</div>
 	</body>
-	<script src="../js/mui.min.js"></script>
+	<script src="js/mui.min.js"></script>
 	<script type="text/javascript">
 		//启用双击监听
 		mui.init({
