--- a/m_detail_hongbao.html
+++ b/m_detail_hongbao.html
@@ -1,4 +1,3 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head lang="en">
@@ -26,12 +25,12 @@
 	<body>
 		<div class="mui-content">
 			<div class="ad">
-				<img src="">
+				<img id="picture" src="">
 			</div>
 			<!--体验步骤部分-->
 			<div class="taste">
 				<h3><i class="icon iconfont">&#xe61c;</i>体验步骤</h3>
-				<div id="strategy" class="detail-html">是发放松岛枫多少分发</div>
+				<div id="strategy" class="detail-html"></div>
 			</div>
 			<!--温馨提示部分-->
 			<div class="prompt">
@@ -44,8 +43,8 @@
 			<!--立即体验部分-->
 			<div class="try">
 				<div class="shuju">
-					<span>体验人数：<number id="number_display">111</number></span>
-				    <span>活动日期：<number id="time_display">222</number></span>
+					<span>体验人数：<number id="number_display"></number></span>
+				    <span>活动日期：<number id="time_display"></number></span>
 				</div>
 				<button id="exp_btn" type="button" class="mui-btn mui-btn-blue mui-btn-block">立即体验</button>
 
@@ -74,7 +73,6 @@
 			  	id = event.detail.id;
 			  //根据id向服务器请求新闻详情
 			  	var self = plus.webview.currentWebview();
-			  	console.log("kaishiajax");
 			  	mui.ajax({
 					url:url_get_content + "?id=" + id,
 					dataType:"json",
@@ -85,10 +83,12 @@
 						else{
 							var ismobile = ret.ismobile;
 							var strategy = ret.strategy;
-							document.getElementById('time_display').innerHTML = ret.strategy;
+							document.getElementById('picture').src = ret.image;
+							document.getElementById('strategy').innerHTML = ret.strategy;
 							document.getElementById('number_display').innerText = ret.num;
 							document.getElementById('time_display').innerText = ret.time;
 							self.show();
+							mui.scrollTo(0, 100);
 							document.getElementById("exp_btn").addEventListener('tap', function() {
 								if(ret.ismobile){
 									self.loadURL(ret.url);
