--- a/template.html
+++ b/template.html
@@ -101,6 +101,7 @@
 			var title = e.detail.title;
 			titleElem.innerHTML = title;
 			titleElem.className = "mui-title mui-fadein";
+			self.show('pop-in');
 		});
 		
 		document.querySelector('header').addEventListener('doubletap',function () {
