--- a/m_index.html
+++ b/m_index.html
@@ -51,10 +51,11 @@
 		//mui初始化
 		mui.init();
 //		var subpages = ['m_welfare_main.html', 'm_task_main.html', 'm_finance_main.html', 'm_account_index.html'];
-		var subpages = ['m_welfare_main.html','m_finance_main.html', 'm_task_main.html'];
+		var subpages = ['m_welfare.html','http://www.baidu.com', 'http://www.baidu.com'];
 		var subpage_style = {
 			top: '45px',
-			bottom: '51px'
+			bottom: '51px',
+//			hardwareAccelerated:true
 		};
 	
 		var aniShow = {};
