--- a/m_index.html
+++ b/m_index.html
@@ -55,7 +55,7 @@
 		var subpage_style = {
 			top: '45px',
 			bottom: '51px',
-//			hardwareAccelerated:true
+			hardwareAccelerated:true
 		};
 	
 		var aniShow = {};
