--- a/m_welfare.html
+++ b/m_welfare.html
@@ -155,10 +155,6 @@
 				mui.fire(detailMainWebview, 'updateHeader', {
 					title: title
 				});
-				var wvs=plus.webview.all();
-				for(var i=0;i<wvs.length;i++){
-					console.log("webview"+i+": "+wvs[i].getURL());
-				}
 				//触发子窗口变更新闻详情
 				mui.fire(detailWebview, 'newsId', {
 					id: id
@@ -245,11 +241,17 @@
 				console.log('pullup');
 				mui.getNews(NEWS_URL + '?lastDate=' + latestPubDate, function(items) {
 					if (items) {
-						console.log(items.length);
-						var news = items;
-						add_doms_news(news);
+						if (items&&items.length>0){
+							mui('#pullrefresh').pullRefresh().endPullupToRefresh();
+						}
+						else{
+							mui('#pullrefresh').pullRefresh().endPullupToRefresh(true);
+							hasMore = false;
+						}
+						add_doms_news(items);
 					}
-	
+				},function(){
+					mui('#pullrefresh').pullRefresh().endPullupToRefresh();
 				});
 			}
 			var downloads = {};
