--- a/m_task_main.html
+++ b/m_task_main.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+
 <!DOCTYPE html>
 <html>
 	<head lang="en">
@@ -22,12 +22,12 @@
 		<meta http-equiv="Cache-Control" content="no-cache">
 		<meta http-equiv="Expires" content="0">
 		<title>体验福利</title>
-		<script src="{%static 'js/mui.min.js'%}"></script>
-		<script src="{%static 'js/mui.pullToRefresh.js'%}"></script>
-		<script src="{%static 'js/mui.pullToRefresh.material.js'%}"></script>
-		<link href="{%static 'css/mui.min.css'%}" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="{%static 'css/m_common.css'%}" />
-		<link rel="stylesheet" type="text/css" href="{%static 'css/m_task.css'%}" />
+		<script src="../js/mui.min.js"></script>
+		<script src="../js/mui.pullToRefresh.js"></script>
+		<script src="../js/mui.pullToRefresh.material.js"></script>
+		<link href="../css/mui.min.css" rel="stylesheet" />
+		<link rel="stylesheet" type="text/css" href="../css/m_common.css" />
+		<link rel="stylesheet" type="text/css" href="../css/m_task.css" />
 	</head>
 
 	<body>
@@ -114,25 +114,25 @@
 			<ul class="clearfix tc">
 				<li>
 					<a href="{%url 'index'%}">
-						<img src="{%static 'images/nav1.png'%}" />
+						<img src="../images/nav1.png" />
 						<span>免费福利</span>
 					</a>
 				</li>
 				<li class="on">
 					<a href="{%url 'task'%}">
-						<img src="{%static 'images/nav2s.png'%}" />
+						<img src="../images/nav2s.png" />
 						<span>体验福利</span>
 					</a>
 				</li>
 				<li>
 					<a href="{%url 'finance'%}">
-						<img src="{%static 'images/nav3.png'%}" />
+						<img src="../images/nav3.png" />
 						<span>理财福利</span>
 					</a>
 				</li>
 				<li>
 					<a href="{%url 'account_index'%}">
-						<img src="{%static 'images/nav4.png'%}" />
+						<img src="../images/nav4.png" />
 						<span>个人中心</span>
 					</a>
 				</li>
