--- a/m_welfare.html
+++ b/m_welfare.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="utf-8">
 		<title>Hello MUI</title>
@@ -146,7 +145,7 @@
 			var detailWebview = null; //详情页面子webview
 			function open_new_detail(id,type,title) {
 				console.log("open_new_detail");
-				var template = getTemplate(type,"m_detail_" + type + ".html");
+				var template = getTemplate('welfare',"m_detail_welfare.html");
 				if (!template){
 					mui.alert("系统错误！");
 				}
@@ -156,8 +155,10 @@
 					title: title
 				});
 				//触发子窗口变更新闻详情
+				console.log("dianji");
 				mui.fire(detailWebview, 'newsId', {
-					id: id
+					id: id,
+					type: type
 				});
 			};
 			/** 新版首次进入执行代码开始 **/
@@ -189,7 +190,7 @@
 						});
 					},1000);
 					setTimeout(function(){
-						getTemplate("hongbao","m_detail_hongbao.html");
+						getTemplate("welfare","m_detail_welfare.html");
 					},400);
 				});
 			});
@@ -427,7 +428,5 @@
 				}
 			}
 		</script>
-
 	</body>
-
 </html>
