--- a/m_detail_welfare.html
+++ b/m_detail_welfare.html
@@ -69,7 +69,6 @@
 			//添加newId自定义事件监听
 			window.addEventListener('newsId',function(event){
 			  //获得事件参数
-			  	console.log("newsid comeon");
 			  	id = event.detail.id;
 			  	type = event.detail.type;
 			  //根据id向服务器请求新闻详情
@@ -89,6 +88,7 @@
 							else{
 								ismobile = ret.ismobile;
 								var strategy = ret.strategy;
+								console.log(strategy);
 								document.getElementById('picture').src = ret.image;
 								document.getElementById('strategy').innerHTML = ret.strategy;
 								document.getElementById('number_display').innerText = ret.num;
@@ -147,25 +147,20 @@
 							mui.alert(type);
 						}
 					});
-					var obtain_coupon_url = "http://m.wafuli.cn/expsumbit_youhuiquan/";
+					var obtain_coupon_url = "http://m.wafuli.cn/app/obtain_youhuiquan/";
 					exp_btn_ele.addEventListener('tap', function() {
 			    		mui.ajax({
-			    			url:obtain_coupon_url + "?id=" + id,
+			    			url:obtain_coupon_url,
 			    			dataType:"json",
+			    			type:"post",
+			    			data:{
+			    				id: id
+			    			},
 			    			success:function(ret){
 			    				if(ret.code==0){
-			    					window.location.href = ret.url;
-			    				}
-			    				else if(ret.code==1){
-			    					mui.alert("抱歉，该优惠券已被领取完了");
-			    				}
-			    				else if(ret.code==2){
-			    					mui.alert("抱歉，您已达到领取次数上限");
-			    				}
-			    				else if(ret.code==3){
 			    					var coupon_id = ret.coupon_id;
 			    					mui.openWindow({
-			    			            url: "{http://m.wafuli.cn/expsumbit_youhuiquan/" + coupon_id,
+			    			            url: "{http://m.wafuli.cn/app/expsumbit_youhuiquan/" + coupon_id,
 			    			            styles: {
 			    			                top: 0,
 			    			                bottom: 0
@@ -179,8 +174,8 @@
 			    			            }
 			    			        });
 			    				}
-			    				else if(ret.code==4){
-			    					mui.alert("抱歉，该项目已结束");
+			    				else{
+			    					mui.alert(ret.msg);
 			    				}
 			    			},
 			    			error:function(xhr,type,errorThrown){
