--- a/m_index.html
+++ b/m_index.html
@@ -28,7 +28,7 @@
 			<h1 id="title" class="mui-title">免费</h1>
 		</header>
 		<nav class="mui-bar mui-bar-tab">
-			<a id="defaultTab" class="mui-tab-item mui-active" href="m_welfare_main.html">
+			<a id="defaultTab" class="mui-tab-item mui-active" href="m_welfare.html">
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label">免费</span>
 			</a>
@@ -40,7 +40,7 @@
 				<span class="mui-icon mui-icon-contact"></span>
 				<span class="mui-tab-label">理财</span>
 			</a>
-			<a class="mui-tab-item" href="http://www.baidu.com">
+			<a class="mui-tab-item" href="a_login.html">
 				<span class="mui-icon mui-icon-gear"><span class="mui-badge">9</span></span>
 				<span class="mui-tab-label">我的</span>
 			</a>
@@ -51,7 +51,7 @@
 		//mui初始化
 		mui.init();
 //		var subpages = ['m_welfare_main.html', 'm_task_main.html', 'm_finance_main.html', 'm_account_index.html'];
-		var subpages = ['m_welfare.html',''];
+		var subpages = ['m_welfare.html','a_login.html'];
 		var subpage_style = {
 			top: '45px',
 			bottom: '51px',
