--- a/a_login.html
+++ b/a_login.html
@@ -90,7 +90,8 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<h1 class="mui-title">登录</h1>
+		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+		    <h1 class="mui-title">登录</h1>
 		</header>
 		<div class="mui-content">
 			<form id='login-form' class="mui-input-group">
@@ -124,7 +125,7 @@
 		</div>
 		<script src="js/mui.min.js"></script>
 		<script src="js/mui.enterfocus.js"></script>
-		<script src="js/app.js"></script>
+		<script src="js/UserInfo.js"></script>
 		<script>
 			(function($, doc) {
 				$.init({
@@ -132,23 +133,25 @@
 				});
 				$.plusReady(function() {
 					plus.screen.lockOrientation("portrait-primary");
-					var settings = app.getSettings();
-					var state = app.getState();
-					var mainPage = plus.webview.getWebviewById("m_welfare.html");
-					var main_loaded_flag = false;
-					mainPage.addEventListener("loaded",function () {
-						main_loaded_flag = true;
-					});
+//					var settings = app.getSettings();
+//					var state = app.getState();
+//					var mainPage = plus.webview.getWebviewById("m_welfare.html");
+//					var main_loaded_flag = true;
+					var self = plus.webview.currentWebview();
+//					mainPage.addEventListener("loaded",function () {
+//						main_loaded_flag = true;
+//					});
 					var toMain = function() {
 						//使用定时器的原因：
 						//可能执行太快，main页面loaded事件尚未触发就执行自定义事件，此时必然会失败
-						var id = setInterval(function () {
-							if(main_loaded_flag){
-								clearInterval(id);
-								$.fire(mainPage, 'show', null);
-								mainPage.show("pop-in");
-							}
-						},20);
+//						var id = setInterval(function () {
+//							if(main_loaded_flag){
+//								clearInterval(id);
+//								$.fire(mainPage, 'show', null);
+//								mainPage.show("pop-in");
+//							}
+//						},20);
+						self.close();
 					};
 					//检查 "登录状态/锁屏状态" 结束
 					var loginButton = doc.getElementById('login');
@@ -163,17 +166,17 @@
 							username: accountBox.value,
 							password: passwordBox.value
 						};
+						UserInfo.username(loginInfo.username);
 						mui.ajax({
 			    			url:'http://m.wafuli.cn/app/login/',
 			    			dataType:"json",
 			    			type:"post",
 			    			data:loginInfo,
 			    			success:function(ret){
-			    				console.log(ret.code);
 			    				if(ret.code==0){
-			    					console.log(ret.token)
-			    					localStorage.setItem('token', ret.token);
-			    					localStorage.setItem('expire', ret.expire);
+			    					console.log(ret.expire);
+			    					UserInfo.token(ret.token);
+			    					UserInfo.expire(ret.expire);
 			    					toMain();
 			    				}
 			    				else if(ret.code==1){
@@ -188,14 +191,14 @@
 					$.enterfocus('#login-form input', function() {
 						$.trigger(loginButton, 'tap');
 					});
-					autoLoginButton.classList[settings.autoLogin ? 'add' : 'remove']('mui-active')
-					autoLoginButton.addEventListener('toggle', function(event) {
-						setTimeout(function() {
-							var isActive = event.detail.isActive;
-							settings.autoLogin = isActive;
-							app.setSettings(settings);
-						}, 50);
-					}, false);
+//					autoLoginButton.classList[settings.autoLogin ? 'add' : 'remove']('mui-active')
+//					autoLoginButton.addEventListener('toggle', function(event) {
+//						setTimeout(function() {
+//							var isActive = event.detail.isActive;
+//							settings.autoLogin = isActive;
+//							app.setSettings(settings);
+//						}, 50);
+//					}, false);
 					regButton.addEventListener('tap', function(event) {
 						$.openWindow({
 							url: 'reg.html',
@@ -230,19 +233,19 @@
 					}, false);
 					//
 
-					var backButtonPress = 0;
-					$.back = function(event) {
-						backButtonPress++;
-						if (backButtonPress > 1) {
-							plus.runtime.quit();
-						} else {
-							plus.nativeUI.toast('再按一次退出应用');
-						}
-						setTimeout(function() {
-							backButtonPress = 0;
-						}, 1000);
-						return false;
-					};
+//					var backButtonPress = 0;
+//					$.back = function(event) {
+//						backButtonPress++;
+//						if (backButtonPress > 1) {
+//							plus.runtime.quit();
+//						} else {
+//							plus.nativeUI.toast('再按一次退出应用');
+//						}
+//						setTimeout(function() {
+//							backButtonPress = 0;
+//						}, 1000);
+//						return false;
+//					};
 				});
 			}(mui, document));
 		</script>
