--- a/m_detail_welfare.html
+++ b/m_detail_welfare.html
@@ -25,7 +25,7 @@
 	<body>
 		<div class="mui-content">
 			<div class="ad">
-				<img id="picture" src="">
+				<img id="picture" src="images/blank.jpg">
 			</div>
 			<!--体验步骤部分-->
 			<div class="taste">
