--- a/m_welfare.html
+++ b/m_welfare.html
@@ -144,7 +144,10 @@
 			var detailMainWebview = null; //详情页面父webview
 			var detailWebview = null; //详情页面子webview
 			function open_new_detail(id,type,title) {
-				console.log("open_new_detail");
+//				var wvs=plus.webview.all();
+//				for(var i=0;i<wvs.length;i++){
+//					console.log("webview"+i+": "+wvs[i].id);
+//				}
 				var template = getTemplate('welfare','template.html',"m_detail_welfare.html");
 				if (!template){
 					mui.alert("系统错误！");
@@ -341,10 +344,10 @@
 					str_block = '<a class="clearfix" data_id="' + wel.id + '" data_type="' + wel.type + '"><img id="news_img_' + wel.id + '" src="'+ 
 									image + '" /><div class="li-info"><h6>' + wel.title + '</h6>';
 					if (wel.view>1000){
-						str_block += '<span class="after-hot">hot</span>';
+						str_block += '<i class="icon iconfont"></i>';
 					}
 					else if ( wel.pubDate > Date.parse(new Date()) -24*60*60*1000 ){
-					 	str_block += '<span class="after-new">new</span>';
+					 	str_block += '<i class="icon iconfont"></i>';
 					}
 					str_block += '<p class="first">';
 					marks = [wel.mark1, wel.mark2, wel.mark3];
@@ -353,8 +356,8 @@
 							str_block += '<span>' + marks[j] + '</span>';
 						}
 					}
-					str_block += '</p><p><span class="s1">'+wel.source+'</span></p>'+
-									'<p><span class="s3">'+wel.time+'</span><span class="s2">'+
+					str_block += '</p><p><span class="s1 icon-renzhengshangjia">'+wel.source+'</span></p>'+
+									'<p><span class="s3 icon-time">'+wel.time+'</span><span class="s2 icon-yanjing">'+
 									wel.view +'</span></p></div></a>';
 					li.innerHTML = str_block;
 					news_group.appendChild(li);
