--- a/m_task.html
+++ b/m_task.html
@@ -30,206 +30,82 @@
 	<body>
 		<div class="mui-content">
 			<!--选项卡部分-->
-			<div id="task_slider" class="mui-slider mui-fullscreen">
-				<div class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-					<a class="mui-control-item" href="#item1">新手入门</a>
-					<a class="mui-control-item" href="#item2">进阶体验</a>
-					<a class="mui-control-item" href="#item3">高手专区</a>
-				</div>
-				<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-4"></div>
-				<div class="mui-slider-group">
-					<div id="item1" class="mui-slider-item mui-control-content mui-active">
-						<div id="scroll1" class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<!--banner部分-->
-								<div id="slider" class="mui-slider" >
-								 <div id="slider-group2" class="mui-slider-group mui-slider-loop">
-								  </div>
-								  <div id="slider-indicator2" class="mui-slider-indicator">
-								  </div>
-								</div>
-								<ul class="mui-table-view">
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div id="item2" class="mui-slider-item mui-control-content">
-						<div id="scroll1" class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<ul class="mui-table-view">
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div id="item3" class="mui-slider-item mui-control-content">
-						<div id="scroll1" class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<ul class="mui-table-view">
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-
+			<!--<nav class="mui-bar">
+				<a id="defaultTab" class="mui-tab-item mui-active" href="m_task_junior.html">
+					<span class="mui-tab-label">免费</span>
+				</a>
+				<a class="mui-tab-item" href="m_task_middle.html">
+					<span>进阶体验</span>
+				</a>
+				<a class="mui-tab-item" href="m_task_senior.html">
+					<span>高手专区</span>
+				</a>
+			</nav>-->
+			<div class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+					<a class="mui-control-item" href="m_task_junior.html">新手入门</a>
+					<a class="mui-control-item" href="m_task_middle.html">进阶体验</a>
+					<a class="mui-control-item" href="m_task_senior.html">高手专区</a>
 			</div>
-
 		</div>
 		<script type="text/javascript" charset="UTF-8" src="js/mui.min.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="js/mui.pullToRefresh.js"></script>
-		<script type="text/javascript" charset="UTF-8" src="js/mui.pullToRefresh.material.js"></script>
 		<script>
-			var slide_group = document.getElementById('slider-group2');
-			var slide_indicator = document.getElementById('slider-indicator2');
-			var get_task_url = "http://m.wafuli.cn/task_json";
-			var get_slider_url = "http://m.wafuli.cn/app/slider/?type=task";
-			var host = "http://m.wafuli.cn";
 			mui.init();
-			(function($) {
-				//阻尼系数
-				var deceleration = mui.os.ios?0.003:0.0009;
-				$('.mui-scroll-wrapper').scroll({
-					bounce: true,
-					indicators: true, //是否显示滚动条
-					deceleration:deceleration
-				});
-				$.ready(function() {
-					$.ajax({
-						type: "get",
-						url: get_slider_url,
-						dataType: 'json',
-						success: function(response) {
-							if (!response) {
-								return error();
-							}
-							if(response.code!=0){
-								mui.alert(response.message)
-							}
-							else{
-								add_doms_slider(response.data,false);
-							}
-						},
-						error:function(xhr,type,errorThrown){
-							mui.alert(type);
-						}
-					});
-					//循环初始化所有上拉加载
-					$.each(document.querySelectorAll('.mui-slider-group .mui-scroll'), function(index, pullRefreshEl) {
-						var count = 0;
-						$(pullRefreshEl).pullToRefresh({
-							up: {
-								auto:true,
-								callback: function() {
-									var self = this;
-									var ul = self.element.querySelector('.mui-table-view');
-									get_task_list(this,ul,count++,index);
-								}
-							}
-						});
-					});
-
-					function get_task_list(obj,ul,n,index){
-						mui.ajax(get_task_url,{
-							data:{
-								count:n,
-								type:index+1,
-							},
-							dataType:'json',//服务器返回json格式数据
-							type:'get',//HTTP请求类型
-							timeout:10000,//超时时间设置为10秒；
-//							headers:{'Content-Type':'application/json'},
-							success:function(data){
-								if (!data.length){
-									obj.endPullUpToRefresh(true);
-								}
-								else {
-									obj.endPullUpToRefresh(false);//参数为true代表没有更多数据了。
-									for (var i in data) {
-										var wel = data[i];
-										var li = document.createElement('li');
-										li.className = 'mui-table-view-cell';
-										str_html = '<a class="clearfix" href="' + wel.url + '"><div class="img-box"><img src="'+
-					                    	host + wel.picurl + '" /></div><p class="info-right';
-										if (wel.state=='2'){
-					                    	str_html += ' task-end';
-					                    }
-					                    str_html += '"><span>';
-					                    if(wel.money>0)
-					                    	str_html += '<b>+<number>' + wel.money + '</number>福币</b>';
-					                    if(wel.score>0)
-					                    	str_html += '<b>+<number>' + wel.score + '</number>积分</b>';
-					                    str_html += '</span></p><div class="info-middle">'+
-					                    	'<h6>' + wel.title + '</h6>';
-					                    if (wel.state=='2'){
-					                    	str_html += '<p>抢光啦</p>';
-					                    }
-					                    else if(wel.is_forbidden){
-					                    	str_html += '<p>已暂停（数据审核中...）</p>'
-					                    }
-					                    else{
-					                    	str_html += '<p>剩&nbsp;<number>'+wel.num+'</number>&nbsp;份</p>';
-					                    }
-					                    str_html += '</div></a>';
-					                    li.innerHTML = str_html;
-										ul.appendChild(li);
-									}
-								}
-							},
-							error:function(xhr,type,errorThrown){
-								alert(type);
-							}
-						});
+			var subpages = ['m_task_junior.html','m_task_middle.html','m_task_senior.html'];
+			var subpage_style = {
+				top: '45px',
+				bottom: '0px',
+				hardwareAccelerated:true
+			};
+		
+			var aniShow = {};
+		
+			//创建子页面，首个选项卡页面显示，其它均隐藏；
+			mui.plusReady(function() {
+				setTimeout(function(){
+					preload();
+				},200);
+			});
+			function preload(){
+				var self = plus.webview.currentWebview();
+				for(var i = 0; i < 3; i++) {
+					var temp = {};
+					var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
+					if(i > 0) {
+						sub.hide();
+					} else {
+						temp[subpages[i]] = "true";
+						mui.extend(aniShow, temp);
 					}
-				});
-			})(mui);
-			function add_doms_slider(sliders, delay){
-				if (!sliders || sliders.length === 0){
+					self.append(sub);
+				}
+			}
+			//当前激活选项
+			var activeTab = subpages[0];
+			var title = document.getElementById("title");
+			//选项卡点击事件
+			mui('.mui-slider-indicator').on('tap', 'a', function(e) {
+				var targetTab = this.getAttribute('href');
+				if(targetTab == activeTab) {
 					return;
 				}
-				var length = sliders.length;
-				var adv_first = sliders[0];
-				var adv_last = sliders[sliders.length-1]
-				var adv_first_div = document.createElement('div');
-				adv_first_div.className = 'mui-slider-item mui-slider-item-duplicate';
-				var image = adv_last.image;
-				if (delay){
-					image = 'images/blank.jpg';
+				//更换标题
+	//			title.innerHTML = this.querySelector('.mui-tab-label').innerHTML;
+				//显示目标选项卡
+				//若为iOS平台或非首次显示，则直接显示
+				if(mui.os.ios || aniShow[targetTab]) {
+					plus.webview.show(targetTab);
+				} else {
+					//否则，使用fade-in动画，且保存变量
+					var temp = {};
+					temp[targetTab] = "true";
+					mui.extend(aniShow, temp);
+					plus.webview.show(targetTab, "fade-in", 300);
 				}
-				adv_first_div.innerHTML= '<a data_id="' + adv_last.id + '"><img id="slider_img_' + 
-					adv_last.id + 's" src="'+ image + '"></a>';
-				slide_group.appendChild(adv_first_div);
-				for (var i = 0; i < length; i++){
-					var slider = sliders[i];
-					image = slider.image;
-					if(delay){
-						image = 'images/blank.jpg';
-					}
-					var adv_div = document.createElement('div');
-					adv_div.className = 'mui-slider-item';
-					adv_div.innerHTML= '<a data_id="' + slider.id + '"><img id="slider_img_' + 
-						slider.id + '" src="'+ image + '"></a>';
-					slide_group.appendChild(adv_div);
-					
-					var ind_div = document.createElement('div');
-					if (i==0){
-						ind_div.className = 'mui-indicator mui-active';
-					}
-					else{
-						ind_div.className = 'mui-indicator';
-					}
-					slide_indicator.appendChild(ind_div);
-				};
-				var adv_last_div = document.createElement('div');
-				adv_last_div.className = 'mui-slider-item mui-slider-item-duplicate';
-				image = adv_first.image;
-				if (delay){
-					image = 'images/blank.jpg';
-				}
-				adv_last_div.innerHTML= '<a data_id="' + adv_first.id + '"><img id="slider_img_' + 
-					adv_first.id + 's" src="'+ image + '"></a>';
-				slide_group.appendChild(adv_last_div);
-				var gallery = mui('.mui-slider');
-				gallery.slider().gotoItem(0);
-			}
+				//隐藏当前;
+				plus.webview.hide(activeTab);
+				//更改当前活跃的选项卡
+				activeTab = targetTab;
+			});
 		</script>
 	</body>
 
